--- a/Makefile.in
+++ b/Makefile.in
@@ -33,7 +33,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-bin_PROGRAMS = pmDJ$(EXEEXT)
+bin_PROGRAMS = smdDump$(EXEEXT) smd2mid$(EXEEXT)
+noinst_PROGRAMS = checkSmds$(EXEEXT)
 subdir = .
 DIST_COMMON = $(am__configure_deps) $(noinst_HEADERS) \
 	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
@@ -48,10 +49,17 @@ mkinstalldirs = $(install_sh) -d
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
-PROGRAMS = $(bin_PROGRAMS)
-am_pmDJ_OBJECTS = pmDJ.$(OBJEXT) smdRead.$(OBJEXT) midiWrite.$(OBJEXT)
-pmDJ_OBJECTS = $(am_pmDJ_OBJECTS)
-pmDJ_LDADD = $(LDADD)
+PROGRAMS = $(bin_PROGRAMS) $(noinst_PROGRAMS)
+am_checkSmds_OBJECTS = checkSmds.$(OBJEXT) smdRead.$(OBJEXT)
+checkSmds_OBJECTS = $(am_checkSmds_OBJECTS)
+checkSmds_LDADD = $(LDADD)
+am_smd2mid_OBJECTS = smd2mid.$(OBJEXT) smdRead.$(OBJEXT) \
+	midiFile.$(OBJEXT) instMap.$(OBJEXT)
+smd2mid_OBJECTS = $(am_smd2mid_OBJECTS)
+smd2mid_LDADD = $(LDADD)
+am_smdDump_OBJECTS = smdDump.$(OBJEXT) smdRead.$(OBJEXT)
+smdDump_OBJECTS = $(am_smdDump_OBJECTS)
+smdDump_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I.@am__isrc@
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -61,8 +69,9 @@ CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 CXXLD = $(CXX)
 CXXLINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) \
 	-o $@
-SOURCES = $(pmDJ_SOURCES)
-DIST_SOURCES = $(pmDJ_SOURCES)
+SOURCES = $(checkSmds_SOURCES) $(smd2mid_SOURCES) $(smdDump_SOURCES)
+DIST_SOURCES = $(checkSmds_SOURCES) $(smd2mid_SOURCES) \
+	$(smdDump_SOURCES)
 HEADERS = $(noinst_HEADERS)
 ETAGS = etags
 CTAGS = ctags
@@ -160,8 +169,12 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-pmDJ_SOURCES = pmDJ.cpp smdRead.cpp midiWrite.cpp
-noinst_HEADERS = smdRead.hpp midiWrite.hpp
+#pmDJ_SOURCES = pmDJ.cpp smdRead.cpp midiWrite.cpp
+smdDump_SOURCES = smdDump.cpp smdRead.cpp
+smd2mid_SOURCES = smd2mid.cpp smdRead.cpp midiFile.cpp instMap.cpp
+checkSmds_SOURCES = checkSmds.cpp smdRead.cpp
+noinst_HEADERS = smdRead.hpp midiFile.hpp instMap.hpp
+EXTRA_DIST = drum_table.txt prog_table.txt README.md
 all: all-am
 
 .SUFFIXES:
@@ -237,9 +250,18 @@ uninstall-binPROGRAMS:
 
 clean-binPROGRAMS:
 	-test -z "$(bin_PROGRAMS)" || rm -f $(bin_PROGRAMS)
-pmDJ$(EXEEXT): $(pmDJ_OBJECTS) $(pmDJ_DEPENDENCIES) 
-	@rm -f pmDJ$(EXEEXT)
-	$(CXXLINK) $(pmDJ_OBJECTS) $(pmDJ_LDADD) $(LIBS)
+
+clean-noinstPROGRAMS:
+	-test -z "$(noinst_PROGRAMS)" || rm -f $(noinst_PROGRAMS)
+checkSmds$(EXEEXT): $(checkSmds_OBJECTS) $(checkSmds_DEPENDENCIES) 
+	@rm -f checkSmds$(EXEEXT)
+	$(CXXLINK) $(checkSmds_OBJECTS) $(checkSmds_LDADD) $(LIBS)
+smd2mid$(EXEEXT): $(smd2mid_OBJECTS) $(smd2mid_DEPENDENCIES) 
+	@rm -f smd2mid$(EXEEXT)
+	$(CXXLINK) $(smd2mid_OBJECTS) $(smd2mid_LDADD) $(LIBS)
+smdDump$(EXEEXT): $(smdDump_OBJECTS) $(smdDump_DEPENDENCIES) 
+	@rm -f smdDump$(EXEEXT)
+	$(CXXLINK) $(smdDump_OBJECTS) $(smdDump_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -247,8 +269,11 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/midiWrite.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pmDJ.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/checkSmds.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/instMap.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/midiFile.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/smd2mid.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/smdDump.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/smdRead.Po@am__quote@
 
 .cpp.o:
@@ -498,7 +523,8 @@ maintainer-clean-generic:
 	@echo "it deletes files that may require special tools to rebuild."
 clean: clean-am
 
-clean-am: clean-binPROGRAMS clean-generic mostlyclean-am
+clean-am: clean-binPROGRAMS clean-generic clean-noinstPROGRAMS \
+	mostlyclean-am
 
 distclean: distclean-am
 	-rm -f $(am__CONFIG_DISTCLEAN_FILES)
@@ -571,19 +597,20 @@ uninstall-am: uninstall-binPROGRAMS
 .MAKE: install-am install-strip
 
 .PHONY: CTAGS GTAGS all all-am am--refresh check check-am clean \
-	clean-binPROGRAMS clean-generic ctags dist dist-all dist-bzip2 \
-	dist-gzip dist-lzma dist-shar dist-tarZ dist-xz dist-zip \
-	distcheck distclean distclean-compile distclean-generic \
-	distclean-tags distcleancheck distdir distuninstallcheck dvi \
-	dvi-am html html-am info info-am install install-am \
-	install-binPROGRAMS install-data install-data-am install-dvi \
-	install-dvi-am install-exec install-exec-am install-html \
-	install-html-am install-info install-info-am install-man \
-	install-pdf install-pdf-am install-ps install-ps-am \
-	install-strip installcheck installcheck-am installdirs \
-	maintainer-clean maintainer-clean-generic mostlyclean \
-	mostlyclean-compile mostlyclean-generic pdf pdf-am ps ps-am \
-	tags uninstall uninstall-am uninstall-binPROGRAMS
+	clean-binPROGRAMS clean-generic clean-noinstPROGRAMS ctags \
+	dist dist-all dist-bzip2 dist-gzip dist-lzma dist-shar \
+	dist-tarZ dist-xz dist-zip distcheck distclean \
+	distclean-compile distclean-generic distclean-tags \
+	distcleancheck distdir distuninstallcheck dvi dvi-am html \
+	html-am info info-am install install-am install-binPROGRAMS \
+	install-data install-data-am install-dvi install-dvi-am \
+	install-exec install-exec-am install-html install-html-am \
+	install-info install-info-am install-man install-pdf \
+	install-pdf-am install-ps install-ps-am install-strip \
+	installcheck installcheck-am installdirs maintainer-clean \
+	maintainer-clean-generic mostlyclean mostlyclean-compile \
+	mostlyclean-generic pdf pdf-am ps ps-am tags uninstall \
+	uninstall-am uninstall-binPROGRAMS
 
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
