Renamed midiFile.* to midiWrite.*; this way, I can write up a _new_ midiFile.* which will do both reading and writing at some point

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,8 +3,8 @@ bin_PROGRAMS = smdDump smd2mid
 noinst_PROGRAMS = checkSmds
 #pmDJ_SOURCES = pmDJ.cpp smdRead.cpp midiWrite.cpp
 smdDump_SOURCES = smdDump.cpp smdRead.cpp
-smd2mid_SOURCES = smd2mid.cpp smdRead.cpp midiFile.cpp instMap.cpp
+smd2mid_SOURCES = smd2mid.cpp smdRead.cpp midiWrite.cpp instMap.cpp
 checkSmds_SOURCES = checkSmds.cpp smdRead.cpp
-noinst_HEADERS = smdRead.hpp midiFile.hpp instMap.hpp
+noinst_HEADERS = smdRead.hpp midiWrite.hpp instMap.hpp
 
 EXTRA_DIST = drum_table.txt prog_table.txt README.md
