--- a/Makefile.in
+++ b/Makefile.in
@@ -54,7 +54,7 @@ am_checkSmds_OBJECTS = checkSmds.$(OBJEXT) smdRead.$(OBJEXT)
 checkSmds_OBJECTS = $(am_checkSmds_OBJECTS)
 checkSmds_LDADD = $(LDADD)
 am_smd2mid_OBJECTS = smd2mid.$(OBJEXT) smdRead.$(OBJEXT) \
-	midiFile.$(OBJEXT) instMap.$(OBJEXT)
+	midiWrite.$(OBJEXT) instMap.$(OBJEXT)
 smd2mid_OBJECTS = $(am_smd2mid_OBJECTS)
 smd2mid_LDADD = $(LDADD)
 am_smdDump_OBJECTS = smdDump.$(OBJEXT) smdRead.$(OBJEXT)
@@ -171,9 +171,9 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 #pmDJ_SOURCES = pmDJ.cpp smdRead.cpp midiWrite.cpp
 smdDump_SOURCES = smdDump.cpp smdRead.cpp
-smd2mid_SOURCES = smd2mid.cpp smdRead.cpp midiFile.cpp instMap.cpp
+smd2mid_SOURCES = smd2mid.cpp smdRead.cpp midiWrite.cpp instMap.cpp
 checkSmds_SOURCES = checkSmds.cpp smdRead.cpp
-noinst_HEADERS = smdRead.hpp midiFile.hpp instMap.hpp
+noinst_HEADERS = smdRead.hpp midiWrite.hpp instMap.hpp
 EXTRA_DIST = drum_table.txt prog_table.txt README.md
 all: all-am
 
@@ -271,7 +271,7 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/checkSmds.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/instMap.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/midiFile.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/midiWrite.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/smd2mid.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/smdDump.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/smdRead.Po@am__quote@
