Wrote up new MIDI file I/O functions. These aren't used by the suit proper yet, but will eventually be used to help enforce the seperation of MIDI code from SMD code.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,10 +1,15 @@
 # Some of these are from pmd2mid, which I'm just going to toss into here for now
 bin_PROGRAMS = smdDump smd2mid
 noinst_PROGRAMS = checkSmds
+check_PROGRAMS = test_midiFile
 #pmDJ_SOURCES = pmDJ.cpp smdRead.cpp midiWrite.cpp
 smdDump_SOURCES = smdDump.cpp smdRead.cpp
 smd2mid_SOURCES = smd2mid.cpp smdRead.cpp midiWrite.cpp instMap.cpp
 checkSmds_SOURCES = checkSmds.cpp smdRead.cpp
-noinst_HEADERS = smdRead.hpp midiWrite.hpp instMap.hpp
+test_midiFile_SOURCES = midiFile__test.cpp midiFile.cpp
+test_midiFile_LDADD = -ltap++
+noinst_HEADERS = smdRead.hpp midiWrite.hpp instMap.hpp midiFile.hpp
 
-EXTRA_DIST = drum_table.txt prog_table.txt README.md
+AM_CXXFLAGS=-DPKGDIR=\"$(top_srcdir)\"
+TESTS = test_midiFile
+EXTRA_DIST = drum_table.txt prog_table.txt README.md test_data/totaka.mid
