Changed smdDump to use smdFile, fixed a bug in the latter I did a manual test with bgm0003, passed.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@ bin_PROGRAMS = smdDump smd2mid
 noinst_PROGRAMS = checkSmds
 check_PROGRAMS = test_midiFile test_smdFile
 #pmDJ_SOURCES = pmDJ.cpp smdRead.cpp midiWrite.cpp
-smdDump_SOURCES = smdDump.cpp smdRead.cpp
+smdDump_SOURCES = smdDump.cpp smdFile.cpp
 smd2mid_SOURCES = smd2mid.cpp smdRead.cpp midiWrite.cpp instMap.cpp
 checkSmds_SOURCES = checkSmds.cpp smdRead.cpp
 test_midiFile_SOURCES = midiFile__test.cpp midiFile.cpp
@@ -14,4 +14,4 @@ noinst_HEADERS = smdRead.hpp midiWrite.hpp instMap.hpp midiFile.hpp smdFile.hpp
 
 AM_CXXFLAGS=-DPKGDIR=\"$(top_srcdir)\"
 TESTS = test_midiFile test_smdFile
-EXTRA_DIST = drum_table.txt prog_table.txt README.md test_data/totaka.mid
+EXTRA_DIST = drum_table.txt prog_table.txt README.md test_data/totaka.mid test_data/bgm0020.smd
