--- a/Makefile.in
+++ b/Makefile.in
@@ -59,7 +59,7 @@ am_smd2mid_OBJECTS = smd2mid.$(OBJEXT) smdRead.$(OBJEXT) \
 	midiWrite.$(OBJEXT) instMap.$(OBJEXT)
 smd2mid_OBJECTS = $(am_smd2mid_OBJECTS)
 smd2mid_LDADD = $(LDADD)
-am_smdDump_OBJECTS = smdDump.$(OBJEXT) smdRead.$(OBJEXT)
+am_smdDump_OBJECTS = smdDump.$(OBJEXT) smdFile.$(OBJEXT)
 smdDump_OBJECTS = $(am_smdDump_OBJECTS)
 smdDump_LDADD = $(LDADD)
 am_test_midiFile_OBJECTS = midiFile__test.$(OBJEXT) midiFile.$(OBJEXT)
@@ -182,7 +182,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 #pmDJ_SOURCES = pmDJ.cpp smdRead.cpp midiWrite.cpp
-smdDump_SOURCES = smdDump.cpp smdRead.cpp
+smdDump_SOURCES = smdDump.cpp smdFile.cpp
 smd2mid_SOURCES = smd2mid.cpp smdRead.cpp midiWrite.cpp instMap.cpp
 checkSmds_SOURCES = checkSmds.cpp smdRead.cpp
 test_midiFile_SOURCES = midiFile__test.cpp midiFile.cpp
@@ -191,7 +191,7 @@ test_smdFile_SOURCES = smdFile__test.cpp smdFile.cpp
 test_smdFile_LDADD = -ltap++
 noinst_HEADERS = smdRead.hpp midiWrite.hpp instMap.hpp midiFile.hpp smdFile.hpp
 AM_CXXFLAGS = -DPKGDIR=\"$(top_srcdir)\"
-EXTRA_DIST = drum_table.txt prog_table.txt README.md test_data/totaka.mid
+EXTRA_DIST = drum_table.txt prog_table.txt README.md test_data/totaka.mid test_data/bgm0020.smd
 all: all-am
 
 .SUFFIXES:
