--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ config.status
 autom4te.cache
 pmdj-trunk.tar.gz
 core
+
+# The following is a dir on my system. If one wants to duplicate it, put the *.smd and *.swd inside it
+nds
