`smd2mid` adapted to use the new set of code now

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ bin_PROGRAMS = smdDump smd2mid
 noinst_PROGRAMS = checkSmds
 check_PROGRAMS = test_midiFile test_smdFile test_smdMidi
 smdDump_SOURCES = smdDump.cpp smdFile.cpp
-smd2mid_SOURCES = smd2mid.cpp smdRead.cpp midiWrite.cpp instMap.cpp
+smd2mid_SOURCES = smd2mid.cpp smdFile.cpp midiFile.cpp instMap.cpp smdMidi.cpp
 checkSmds_SOURCES = checkSmds.cpp smdRead.cpp
 test_midiFile_SOURCES = midiFile__test.cpp midiFile.cpp
 test_midiFile_LDADD = -ltap++
