--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@ noinst_PROGRAMS = checkSmds
 check_PROGRAMS = test_midiFile test_smdFile test_smdMidi
 smdDump_SOURCES = smdDump.cpp smdFile.cpp
 smd2mid_SOURCES = smd2mid.cpp smdFile.cpp midiFile.cpp instMap.cpp smdMidi.cpp
-checkSmds_SOURCES = checkSmds.cpp smdRead.cpp
+checkSmds_SOURCES = checkSmds.cpp smdFile.cpp
 test_midiFile_SOURCES = midiFile__test.cpp midiFile.cpp
 test_midiFile_LDADD = -ltap++
 test_smdFile_SOURCES = smdFile__test.cpp smdFile.cpp
