Edited the Makefile.am, and added a dummy source file This system (cDusto) lacks automake-1.11, can't do anything else ATM

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = smdDump smd2mid pmDJ smdInfo swdDump
-noinst_PROGRAMS = checkSmds
+noinst_PROGRAMS = checkSmds easyName
 check_PROGRAMS = test_midiFile test_smdFile test_smdMidi
 smdDump_SOURCES = smdDump.cpp smdFile.cpp
 smd2mid_SOURCES = smd2mid.cpp smdFile.cpp midiFile.cpp instMap.cpp smdMidi.cpp
@@ -7,6 +7,7 @@ smdInfo_SOURCES = smdInfo.cpp smdFile.cpp
 pmDJ_SOURCES = pmDJ.cpp smdFile.cpp midiFile.cpp instMap.cpp smdMidi.cpp
 checkSmds_SOURCES = checkSmds.cpp smdFile.cpp
 swdDump_SOURCES = swdDump.cpp swdFile.cpp
+easyName_SOURCES = easyName.cpp
 test_midiFile_SOURCES = midiFile__test.cpp midiFile.cpp
 test_midiFile_LDADD = -ltap++
 test_smdFile_SOURCES = smdFile__test.cpp smdFile.cpp
